--- a/svr/.env
+++ b/svr/.env
@@ -1,6 +1,6 @@
 PORT=5000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=@en_kenya.
+DB_HOST=nrmnkny.cxuayusu2wkp.eu-north-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=Hei$enberg1
 DB_DATABASE=nrmnkny
 DB_PORT=3306
