new amRDZ-attmpt1

--- a/svr/.env
+++ b/svr/.env
@@ -2,5 +2,5 @@ PORT=5000
 DB_HOST=nrmnknydb.cxuayusu2wkp.eu-north-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=Hei$enberg1
-DB_DATABASE=nrmnkny
+DB_DATABASE=nrmnknydb
 DB_PORT=1433
