--- a/svr/.env
+++ b/svr/.env
@@ -1,7 +1,7 @@
 PORT=5000
-DB_HOST=nrmnknydb.cxuayusu2wkp.eu-north-1.rds.amazonaws.com
-DB_USER=admin
-DB_PASSWORD=Hei$enberg1
-DB_DATABASE=nrmnknydb
+DB_HOST=localhost
+DB_USER=nrmnkny
+DB_PASSWORD=@en_kenya.
+DB_DATABASE=nrmnkny_db1
 DB_PORT=1433
 JWT_SECRET=your_jwt_secret
